NetBSD Problem Report #55044

From www@netbsd.org  Tue Mar  3 07:38:55 2020
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 641841A9217
	for <gnats-bugs@gnats.NetBSD.org>; Tue,  3 Mar 2020 07:38:55 +0000 (UTC)
Message-Id: <20200303073854.7614D1A9242@mollari.NetBSD.org>
Date: Tue,  3 Mar 2020 07:38:54 +0000 (UTC)
From: mirror@6bone.informatik.uni-leipzig.de
Reply-To: mirror@6bone.informatik.uni-leipzig.de
To: gnats-bugs@NetBSD.org
Subject: netbsd-9 compile error
X-Send-Pr-Version: www-1.0

>Number:         55044
>Category:       kern
>Synopsis:       netbsd-9 compile error
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Mar 03 07:40:00 +0000 2020
>Closed-Date:    Tue Mar 03 21:43:55 +0000 2020
>Last-Modified:  Sun Mar 08 14:45:01 +0000 2020
>Originator:     Uwe Toenjes
>Release:        NetBSD 9.0
>Organization:
University of Leipzig
>Environment:
NetBSD 9.0
>Description:
kernel compile error 

--- if_ena.o ---
/usr/src/sys/dev/pci/if_ena.c: In function 'ena_request_io_irq':
/usr/src/sys/dev/pci/if_ena.c:2089:7: error: unused variable 'irq_slot' [-Werror=unused-variable]
   int irq_slot = i + irq_off;
       ^~~~~~~~

>How-To-Repeat:
activate DEBUG in the kernel configuration and compile the kernel.


#if defined(DEBUG) || defined(DIAGNOSTIC)
                int irq_slot = i + irq_off;
#endif

>Fix:
it seems like the #if statement is not needed. It can be removed.

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: jdolecek@NetBSD.org
State-Changed-When: Tue, 03 Mar 2020 21:43:55 +0000
State-Changed-Why:
Fixed in -current, thanks for report.
Probably too minor to pull this up to netbsd-9, if you feel strongly about
this let me know.


From: "Jaromir Dolecek" <jdolecek@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55044 CVS commit: src/sys/dev/pci
Date: Tue, 3 Mar 2020 21:42:31 +0000

 Module Name:	src
 Committed By:	jdolecek
 Date:		Tue Mar  3 21:42:31 UTC 2020

 Modified Files:
 	src/sys/dev/pci: if_ena.c

 Log Message:
 replace #if condition for irq_slot with __diagused on the cleanup path

 fixes PR kern/55044 by Uwe Toenjes


 To generate a diff of this commit:
 cvs rdiff -u -r1.23 -r1.24 src/sys/dev/pci/if_ena.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55044 CVS commit: [netbsd-9] src/sys/dev/pci
Date: Sun, 8 Mar 2020 14:44:06 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Sun Mar  8 14:44:06 UTC 2020

 Modified Files:
 	src/sys/dev/pci [netbsd-9]: if_ena.c

 Log Message:
 Pull up following revision(s) (requested by jdolecek in ticket #759):

 	sys/dev/pci/if_ena.c: revision 1.24

 replace #if condition for irq_slot with __diagused on the cleanup path

 fixes PR kern/55044 by Uwe Toenjes


 To generate a diff of this commit:
 cvs rdiff -u -r1.15.2.1 -r1.15.2.2 src/sys/dev/pci/if_ena.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.