Pull up following revision(s) (requested by jdolecek in ticket #759):

sys/dev/pci/if_ena.c: revision 1.24

replace #if condition for irq_slot with __diagused on the cleanup path

fixes PR kern/55044 by Uwe Toenjes